tests/snapshots/yaml_suite_snapshots__yaml_suite_SU5Z_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Comment without whitespace after doublequoted scalar
  from: "@perlpunk"
  tags: comment error double whitespace
  fail: true
  yaml: "key: \"value\"# invalid comment\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL \"value\n"
