tests/snapshots/yaml_suite_snapshots__yaml_suite_SU5Z_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Comment without whitespace after doublequoted scalar
  tags: comment error double whitespace
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL \"value\n"
  yaml: "key: \"value\"# invalid comment\n"
