tests/snapshots/yaml_suite_snapshots__yaml_suite_SU74_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Anchor and alias as mapping key
  from: "@perlpunk"
  tags: error anchor alias mapping
  fail: true
  yaml: "key1: &alias value1\n&b *alias : value2\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key1\n   =VAL &alias :value1\n"
