tests/snapshots/yaml_suite_snapshots__yaml_suite_SU74_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Anchor and alias as mapping key
  tags: error anchor alias mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key1\n   =VAL &alias :value1\n"
  yaml: "key1: &alias value1\n&b *alias : value2\n"
