tests/snapshots/yaml_suite_snapshots__yaml_suite_SY6V_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Anchor before sequence entry on same line
  from: "@perlpunk"
  tags: anchor error sequence
  fail: true
  yaml: "&anchor - sequence entry\n"
  tree: "+STR\n"
