tests/snapshots/yaml_suite_snapshots__yaml_suite_SY6V_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Anchor before sequence entry on same line
  tags: anchor error sequence
  tree: "+STR\n"
  yaml: "&anchor - sequence entry\n"
