tests/snapshots/yaml_suite_snapshots__yaml_suite_SYW4_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 2.2. Mapping Scalars to Scalars
  from: "http://www.yaml.org/spec/1.2/spec.html#id2759963"
  tags: spec scalar comment
  yaml: "hr:  65    # Home runs\navg: 0.278 # Batting average\nrbi: 147   # Runs Batted In\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :hr\n   =VAL :65\n   =VAL :avg\n   =VAL :0.278\n   =VAL :rbi\n   =VAL :147\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"hr\": 65,\n  \"avg\": 0.278,\n  \"rbi\": 147\n}\n"
  dump: "hr: 65\navg: 0.278\nrbi: 147\n"
